--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,15 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
-lib_deps = bblanchon/ArduinoJson@^7.0.4
+lib_deps = 
+	bblanchon/ArduinoJson@^7.0.4
+	henrikste/ESP32FTPServer@^0.0.2
+board_build.f_cpu = 240000000L
+board_build.f_flash = 80000000L
+board_build.flash_mode = qio
+build_flags = 
+	-DBOARD_HAS_PSRAM
+	-mfix-esp32-psram-cache-issue
+	-DCORE_DEBUG_LEVEL=0
+	-O3
+upload_speed = 921600
