--- a/platformio.ini
+++ b/platformio.ini
@@ -15,6 +15,7 @@ framework = arduino
 lib_deps = 
 	bblanchon/ArduinoJson@^7.0.4
 	henrikste/ESP32FTPServer@^0.0.2
+	knolleary/PubSubClient@^2.8
 board_build.f_cpu = 240000000L
 board_build.f_flash = 80000000L
 board_build.flash_mode = qio
